// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonThin Component matches snapshot for default variant 1`] = `
<div
  class="sc-bRKDuR ekYLeu"
  type="button"
  variant="black"
>
  <svg
    fill="none"
    height="24"
    viewBox="0 0 25 25"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3.19236 8.1636L4.25586 7.1001L12.5001 15.3443L20.7444 7.1001L21.8079 8.1636L12.5001 17.4713L3.19236 8.1636Z"
      fill="#F6F6F6"
    />
  </svg>
   
  Snapshot Thin Button
  <svg
    fill="none"
    height="24"
    viewBox="0 0 25 25"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3.19236 8.1636L4.25586 7.1001L12.5001 15.3443L20.7444 7.1001L21.8079 8.1636L12.5001 17.4713L3.19236 8.1636Z"
      fill="#F6F6F6"
    />
  </svg>
</div>
`;

exports[`ButtonThin Component matches snapshot for grey variant 1`] = `
<div
  class="sc-bRKDuR fzARNN"
  type="button"
  variant="grey"
>
  <svg
    fill="none"
    height="24"
    viewBox="0 0 25 25"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3.19236 8.1636L4.25586 7.1001L12.5001 15.3443L20.7444 7.1001L21.8079 8.1636L12.5001 17.4713L3.19236 8.1636Z"
      fill="#F6F6F6"
    />
  </svg>
   
  Grey Thin Button
  <svg
    fill="none"
    height="24"
    viewBox="0 0 25 25"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3.19236 8.1636L4.25586 7.1001L12.5001 15.3443L20.7444 7.1001L21.8079 8.1636L12.5001 17.4713L3.19236 8.1636Z"
      fill="#F6F6F6"
    />
  </svg>
</div>
`;
